@@ -1,3 +1,9 @@
+2005-05-17  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-png.c (write_png): Only unpremultiply ARGB32 data.
+	Call png_write_info() *before* we set up the write conversion...
+	it doesn't work after.
+
 2005-06-23  Carl Worth  <cworth@cworth.org>
 
 	* ROADMAP: Add workaround for Render's overlapping source/dest bug
